--- a/trunk/LuaDebuger/LuaDebuger.vcproj
+++ b/trunk/LuaDebuger/LuaDebuger.vcproj
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="gb2312"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="LuaDebuger"
 	ProjectGUID="{A6A3A671-E708-4D13-9D42-2EF9BF13A4AF}"
 	RootNamespace="LuaDebuger"
 	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
