--- a/Depend/Visual Leak Detector/src/vld.vcproj
+++ b/Depend/Visual Leak Detector/src/vld.vcproj
@@ -45,6 +45,7 @@
 				RuntimeLibrary="3"
 				EnableFunctionLevelLinking="true"
 				WarningLevel="4"
+				Detect64BitPortabilityProblems="false"
 				DebugInformationFormat="4"
 			/>
 			<Tool
@@ -120,6 +121,7 @@
 				RuntimeLibrary="2"
 				BufferSecurityCheck="false"
 				FloatingPointModel="2"
+				Detect64BitPortabilityProblems="false"
 				DebugInformationFormat="3"
 			/>
 			<Tool
