--- a/GameClient/GameClient.vcproj
+++ b/GameClient/GameClient.vcproj
@@ -49,7 +49,7 @@
 				UsePrecompiledHeader="2"
 				BrowseInformation="0"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="true"
+				Detect64BitPortabilityProblems="false"
 				DebugInformationFormat="4"
 			/>
 			<Tool
@@ -129,7 +129,7 @@
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="2"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="true"
+				Detect64BitPortabilityProblems="false"
 				DebugInformationFormat="3"
 			/>
 			<Tool
