--- a/GameSDK/SLB/SLB.vcproj
+++ b/GameSDK/SLB/SLB.vcproj
@@ -45,6 +45,7 @@
 				RuntimeLibrary="3"
 				BufferSecurityCheck="false"
 				WarningLevel="3"
+				Detect64BitPortabilityProblems="false"
 				DebugInformationFormat="4"
 				ShowIncludes="false"
 			/>
@@ -101,6 +102,7 @@
 				Name="VCCLCompilerTool"
 				PreprocessorDefinitions="_WIN32;NDEBUG;SLB_EXTERNAL_LUA;_LIB;_CRT_SECURE_NO_DEPRECATE"
 				RuntimeLibrary="2"
+				Detect64BitPortabilityProblems="false"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
