--- a/trunk/GameSDK/GameUILib/GUI.vcproj
+++ b/trunk/GameSDK/GameUILib/GUI.vcproj
@@ -265,6 +265,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Include\MessageDefine.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\UICommander.cpp"
 				>
 			</File>
