--- a/trunk/GameSDK/GameWorld/GameWorld.vcproj
+++ b/trunk/GameSDK/GameWorld/GameWorld.vcproj
@@ -121,7 +121,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories=".\;.\include;..\GameCore\Include"
+				AdditionalIncludeDirectories=".\;.\include;..\GameCore\Include;..\..\Helplib"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;GAMEWORLD_EXPORTS"
 				RuntimeLibrary="0"
 				UsePrecompiledHeader="2"
