--- a/trunk/GameSDK/GameUILib/GUI.vcproj
+++ b/trunk/GameSDK/GameUILib/GUI.vcproj
@@ -43,7 +43,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\Helplib;&quot;..\..\Depend\Loki-0.1.6\Include&quot;;..\..\LuaDebuger;&quot;..\lua-5.1.4\src&quot;;..\SLB\Include;..\GameCore\Include;./Include"
+				AdditionalIncludeDirectories="..\..\Helplib;&quot;..\..\Depend\Loki-0.1.6\Include&quot;;&quot;..\..\Depend\Visual Leak Detector\include&quot;;..\..\LuaDebuger;&quot;..\lua-5.1.4\src&quot;;..\SLB\Include;..\GameCore\Include;./Include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_MEMLEAK_"
 				GeneratePreprocessedFile="0"
 				MinimalRebuild="false"
